navbar z-index fix

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,18 @@ body {
           justify-content: space-between;
   width: 100%;
   padding: 1rem 2rem;
-  background: #002651;
+  background: #002652;
+  z-index: 1000;
+}
+
+.navbar .nav-bg {
+  z-index: 100;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #002652;
 }
 
 .navbar .navbar-toggler {
@@ -52,6 +63,8 @@ body {
 .navbar .navbar-toggler .toggler-line {
   height: 2px;
   background: #fff;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .navbar .navbar-toggler .toggler-line:nth-of-type(1) {
@@ -66,16 +79,44 @@ body {
   width: 50%;
 }
 
+.navbar .navbar-toggler.active {
+  position: relative;
+}
+
 .navbar .navbar-toggler.active .toggler-line {
+  position: absolute;
+  top: 16 px;
+  left: 0;
   width: 100%;
   height: 2px;
   background: #fff;
+}
+
+.navbar .navbar-toggler.active .toggler-line:nth-of-type(1) {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.navbar .navbar-toggler.active .toggler-line:nth-of-type(2) {
+  display: none;
+}
+
+.navbar .navbar-toggler.active .toggler-line:nth-of-type(3) {
+  -webkit-transform: rotate(140deg);
+          transform: rotate(140deg);
 }
 
 .navbar .navbar-logo a {
   color: #fff;
   text-decoration: none;
   font-size: 1.7rem;
+  position: relative;
+  z-index: 200;
+}
+
+.navbar .navbar-navigation {
+  position: relative;
+  z-index: 300;
 }
 
 .navbar .navbar-navigation ul {
@@ -94,7 +135,7 @@ body {
   text-decoration: none;
 }
 
-.navbar .navbar-navigation ul li a:hover {
+.navbar .navbar-navigation ul li a:hover, .navbar .navbar-navigation ul li a.nav-active {
   color: #28c7fa;
 }
 
@@ -105,29 +146,27 @@ body {
     display: flex;
   }
   .navbar .navbar-navigation.mobile {
+    z-index: 50;
     position: absolute;
-    top: 0;
-    right: 0;
-    height: 100vh;
+    top: 65px;
+    left: 0;
+    width: 100vw;
     background: #002651;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
     padding: 0 3rem;
-    -webkit-transform: translateX(100%);
-            transform: translateX(100%);
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
     -webkit-transition: all 0.3s ease-in;
     transition: all 0.3s ease-in;
   }
   .navbar .navbar-navigation.mobile.mobile-active {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
   }
   .navbar .navbar-navigation.mobile ul {
     -webkit-box-orient: vertical;
