--- a/src/sass/navbar/_navbar.scss
+++ b/src/sass/navbar/_navbar.scss
@@ -7,7 +7,18 @@
   justify-content: space-between;
   width: 100%;
   padding: 1rem 2rem;
-  background: #002651;
+  background: hsl(212, 100%, 16%);
+  z-index: 1000;
+
+  .nav-bg {
+    z-index: 100;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: hsl(212, 100%, 16%);
+  }
 
   // Navbar Toggler
   .navbar-toggler {
@@ -24,6 +35,7 @@
     .toggler-line {
       height: 2px;
       background: #fff;
+      transition: all 0.3s ease-in-out;
     }
 
     .toggler-line:nth-of-type(1) {
@@ -37,10 +49,25 @@
     }
 
     &.active {
+      // display: flex;
+      position: relative;
       .toggler-line {
+        position: absolute;
+        top: (32/2) px;
+        left: 0;
         width: 100%;
         height: 2px;
         background: #fff;
+      }
+
+      .toggler-line:nth-of-type(1) {
+        transform: rotate(45deg);
+      }
+      .toggler-line:nth-of-type(2) {
+        display: none;
+      }
+      .toggler-line:nth-of-type(3) {
+        transform: rotate(140deg);
       }
     }
   }
@@ -50,10 +77,14 @@
       color: #fff;
       text-decoration: none;
       font-size: 1.7rem;
+      position: relative;
+      z-index: 200;
     }
   }
 
   .navbar-navigation {
+    position: relative;
+    z-index: 300;
     ul {
       display: flex;
       list-style: none;
@@ -65,7 +96,8 @@
           color: #fff;
           text-decoration: none;
 
-          &:hover {
+          &:hover,
+          &.nav-active {
             color: #28c7fa;
           }
         }
@@ -82,20 +114,22 @@
     }
 
     .navbar-navigation.mobile {
+      z-index: 50;
       position: absolute;
-      top: 0;
-      right: 0;
-      height: 100vh;
+      top: 65px;
+      left: 0;
+      // height: 100vh;
+      width: 100vw;
       background: #002651;
       display: flex;
-      justify-content: center;
+      // justify-content: center;
       align-items: center;
       padding: 0 3rem;
-      transform: translateX(100%);
+      transform: translateY(-100%);
       transition: all 0.3s ease-in;
 
       &.mobile-active {
-        transform: translateX(0);
+        transform: translateY(0);
       }
 
       ul {
@@ -108,3 +142,38 @@
     }
   }
 }
+
+// // Mobile
+// @media (max-width: 1000px) {
+//   .navbar {
+//     .navbar-toggler {
+//       display: flex;
+//     }
+
+//     .navbar-navigation.mobile {
+//       position: absolute;
+//       top: 0;
+//       right: 0;
+//       height: 100vh;
+//       background: #002651;
+//       display: flex;
+//       justify-content: center;
+//       align-items: center;
+//       padding: 0 3rem;
+//       transform: translateX(100%);
+//       transition: all 0.3s ease-in;
+
+//       &.mobile-active {
+//         transform: translateX(0);
+//       }
+
+//       ul {
+//         flex-direction: column;
+
+//         li {
+//           margin: 1rem 0;
+//         }
+//       }
+//     }
+//   }
+// }
